# OpencodeBC-BrokenCircuits-edition

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MEDIUM_TERM.md  README.md  SHORT_TERM.md  SOUL.md  TOOLS.md  USER.md  install-opencode-from-fork.sh  install.sh  opencode-skills-catalog.md
.config/Code/User/: settings.json
.venvs/base/: pyvenv.cfg
Desktop/VGLF/PROJECTSHHH/VGLF/: .gitignore  CLAUDE.md  Cargo.toml  build-phase.md  red-teamer.md  settings.json  validate-model.md
Desktop/VGLF/PROJECTSHHH/VGLF/.claude/: settings.json
Desktop/VGLF/PROJECTSHHH/VGLF/.claude/agents/: cortex-builder.md  pqc-specialist.md  security-auditor.md
Desktop/VGLF/PROJECTSHHH/VGLF/.claude/commands/: redteam.md
Desktop/VGLF/PROJECTSHHH/VGLF/config/: sacrosanct.toml.example
Desktop/VGLF/PROJECTSHHH/VGLF/cortex-engine/: pyproject.toml  requirements.txt
Desktop/VGLF/PROJECTSHHH/VGLF/cortex-engine/config/: cortex.toml.example
Desktop/VGLF/PROJECTSHHH/VGLF/cortex-engine/cortex/: __init__.py  analyzer.py  config.py  db.py  ipc_client.py  llm_client.py  main.py  validator.py
Desktop/VGLF/PROJECTSHHH/VGLF/cortex-engine/tests/: test_security.py
Desktop/VGLF/PROJECTSHHH/VGLF/models/: README.md
Desktop/VGLF/PROJECTSHHH/VGLF/pqc-keymgmt/: Cargo.toml
Desktop/VGLF/PROJECTSHHH/VGLF/pqc-keymgmt/src/: bundle_signer.rs  keystore.rs  lib.rs  lifecycle.rs  model_signer.rs
Desktop/VGLF/PROJECTSHHH/VGLF/spinal-cord/: Cargo.toml
Desktop/VGLF/PROJECTSHHH/VGLF/spinal-cord/src/: lib.rs
Desktop/VGLF/PROJECTSHHH/VGLF/spinal-cord/src/crypto/: dsa.rs  kem.rs  mod.rs  traits.rs
Desktop/VGLF/PROJECTSHHH/VGLF/spinal-cord/src/ipc/: handler.rs  mod.rs  nft.rs  protocol.rs  sacrosanct.rs
Desktop/VGLF/PROJECTSHHH/VGLF/tests/canary/: validate.py
Desktop/VGLF/PROJECTSHHH/VGLF/tests/pqc-vectors/: README.md
Desktop/VGLF/PROJECTSHHH/VGLF/tier0-ratelimit/: nftables.conf
Desktop/VGLF/PROJECTSHHH/VGLF/vortex-sink/: Cargo.toml
Desktop/VGLF/PROJECTSHHH/VGLF/vortex-sink/src/: lib.rs  merkle.rs  schema.rs  store.rs  syslog.rs
knowledge-base/: .env.example  README.md  package-lock.json  package.json
knowledge-base/scripts/: setup.sh
knowledge-base/src/: cli.js  index.js  longTermMemory.js  shortTermMemory.js
models/: README.md  kimi.py  mistral.py
skills/azure-cli/: SKILL.md
skills/azure-cli/scripts/: check-ai-foundry.sh
skills/memory/: SKILL.md
skills/memory/scripts/: memory.py
skills/proxmox-manager/: SKILL.md
skills/proxmox-manager/scripts/: list-vms.py  node-status.py  setup-opencode-bc-kali.sh  test-connection.py
