[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vglf-cortex"
version = "0.1.0"
description = "VGLF Cortex Engine — Tier 3 LLM cognitive analysis for the Vortex-Gated LLM Firewall"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "BreakingCircuits.com" }
]
keywords = ["security", "firewall", "llm", "ics", "scada", "water-treatment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "openai>=1.30.0",
    "duckdb>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.9.0",
]

[project.scripts]
cortex = "cortex.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortex*"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
log_cli = true
log_cli_level = "WARNING"
