[package]
name = "pqc-keymgmt"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "ML-DSA-65 key lifecycle management for VGLF"

[dependencies]
spinal-cord = { path = "../spinal-cord" }
anyhow.workspace = true
thiserror.workspace = true
sha3.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
hex.workspace = true
zeroize.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
