[package]
name = "spinal-cord"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
aws-lc-rs.workspace = true
sha3.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
zeroize.workspace = true
hex.workspace = true
tokio.workspace = true
ipnetwork.workspace = true
base64.workspace = true
toml.workspace = true

[dev-dependencies]
hex.workspace = true
tokio = { workspace = true, features = ["test-util"] }
