[package]
name = "vortex-sink"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
spinal-cord = { path = "../spinal-cord" }
anyhow.workspace = true
thiserror.workspace = true
sha3.workspace = true
aws-lc-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
hex.workspace = true
zeroize.workspace = true
base64.workspace = true
ipnetwork.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
